--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="styles.css" /> 
+<link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <header>
-        <img src=""
-        <nav>
-
-        </nav>
-        <section>
             <h1>Welcome to our story<br>about cupcakes and macarons</h1>
             <a class="Button" id="btnOrderPastries">
             <a class="Button" id="btnMoreInfo"></a>
         </section>
 
+                <li><a href="ourStory">Our Story</a></li>
+                <li><a href="#pastries">Pastries</a></li>
+                <li><a href="#occasions">Occasions</a></li>
+                <li><a href="#contactUs">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <section><h2>#</h2></section>
     </main>
     <footer>
 
