--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 </head>
 <body>
     <header>
+        <section id="ourStoryHeader">
             <h1>Welcome to our story<br>about cupcakes and macarons</h1>
-            <a class="Button" id="btnOrderPastries">
+            <a class="Button" id="btnOrderPastries"></a>
             <a class="Button" id="btnMoreInfo"></a>
         </section>
-
+        <img src="images/baking-logo.png" alt="A Baking Story logo">
+        <nav>
+            <h2>Main Navigation</h2>
+            <input type="checkbox" id="dropdown">
+            <label for="dropdown"><span></span></label>
+            <ul>
                 <li><a href="ourStory">Our Story</a></li>
                 <li><a href="#pastries">Pastries</a></li>
                 <li><a href="#occasions">Occasions</a></li>
