--- a/index.html
+++ b/index.html
@@ -23,18 +23,45 @@
             <input type="checkbox" id="dropdown">
             <label for="dropdown"><span></span></label>
             <ul>
-                <li><a href="ourStory">Our Story</a></li>
+                <li><a href="#features">Our Story</a></li>
+                <li><a href="#howTo">Baking</a></li>
                 <li><a href="#pastries">Pastries</a></li>
-                <li><a href="#occasions">Occasions</a></li>
-                <li><a href="#contactUs">Contact Us</a></li>
+                <li><a href="#form">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section><h2>#</h2></section>
+        <section id="features">
+                <h2>Always Fresh — Baked to Perfection</h2>
+                <p>Hello, we're a Baking Story, your bakery on the corner.&nbsp;We know you're always busy. No time for baking. So let us take care of that. Just brows our menu and order away!</p>
+            <section>
+                <h3>365 days / year</h3>
+                <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
+                <icon></icon>
+            </section>
+            <section>
+                <h3>Ready in 20</h3>
+                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best bakers in each town to ensure that you're 100% happy.</p>
+                <icon></icon>
+            </section>
+            <section>
+                <h3>100% Organic</h3>
+                <p>All our ingredients are fresh, organic and local. Everything is baked the same day. Good for your health, the environment, and it also tastes better!</p>
+                <icon></icon>
+            </section>
+            <section>
+                <h3>Order Anything</h3>
+                <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
+                <icon></icon>
+            </section>
+            
+        </section>
+        <section id="#howTo"><h2>#</h2></section>
+        <section id="#pastries"><h2>#</h2></section>
+        <section id="#form"><h2>#</h2></section>
     </main>
     <footer>
-
+        <section id="#footer"><h2>#</h2></section>
     </footer>
 </body>
 </html>
