--- a/index.html
+++ b/index.html
@@ -34,31 +34,58 @@
         <section id="features">
                 <h2>Always Fresh — Baked to Perfection</h2>
                 <p>Hello, we're a Baking Story, your bakery on the corner.&nbsp;We know you're always busy. No time for baking. So let us take care of that. Just brows our menu and order away!</p>
-            <section>
-                <h3>365 days / year</h3>
-                <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
-                <icon></icon>
-            </section>
-            <section>
-                <h3>Ready in 20</h3>
-                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best bakers in each town to ensure that you're 100% happy.</p>
-                <icon></icon>
-            </section>
-            <section>
-                <h3>100% Organic</h3>
-                <p>All our ingredients are fresh, organic and local. Everything is baked the same day. Good for your health, the environment, and it also tastes better!</p>
-                <icon></icon>
-            </section>
-            <section>
-                <h3>Order Anything</h3>
-                <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
-                <icon></icon>
-            </section>
+                <div><section>
+                    <h3>365 days / year</h3>
+                    <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
+                    <img src="images/ion--ios-calendar.svg" alt="calendar-icon">
+                </section>
+                <section>
+                    <h3>Ready in 20</h3>
+                    <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best bakers in each town to ensure that you're 100% happy.</p>
+                    <img src="images/ion--ios-stopwatch-outline.svg" alt="stopwatch-icon">
+                </section>
+                <section>
+                    <h3>100% Organic</h3>
+                    <p>All our ingredients are fresh, organic and local. Everything is baked the same day. Good for your health, the environment, and it also tastes better!</p>
+                    <img src="images/ion--ios-nutrition-outline.svg" alt="carrot-icon">
+                </section>
+                <section>
+                    <h3>Order Anything</h3>
+                    <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
+                    <img src="images/ion--ios-cart-outline.svg" alt="shopping_cart-icon">
+                </section>
+            </div>
             
         </section>
-        <section id="#howTo"><h2>#</h2></section>
-        <section id="#pastries"><h2>#</h2></section>
-        <section id="#form"><h2>#</h2></section>
+        <section id="#howTo">
+            <h2>Perfect Macarons</h2>
+            <p>Hello, we are a Baking Story, your bakery on the corner. We know you are always busy. No time for baking. So let us take care of that. Just browse our menu and order away!
+            We don't limit your creativity, meaning you can order whatever you like. You can also choose from our menu, which contains over 100 delicious goods. It's up to you!
+            All our ingredients are fresh, organic, and local. Everything is baked on the same day. It is good for your health and the environment and tastes better!</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HrnvOqMULUk?si=oZV3loWdM0WH0raQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <section id="#pastries">
+            <h2>Always Fresh — Order your Pastries</h2>
+            <section>
+                <h3>Ice Cream Cake Dessert</h3>
+                <img src="" alt="">
+                <h4>Cake</h4>
+                <ul>
+                    <li>Cake Size: 8" Cake — Serves 8</li>
+                    <li>Flavor: Vanilla Ice Cream</li>
+                    <li>Bottom: Chocolate Brownie</li>
+                    <li>Topping: Strawberries<br>
+                        Raspberries, Blueberries</li>
+                </ul>
+                <p><data value="24">24</data>$</p>
+
+                <label for=""></label>
+            </section>
+
+        </section>
+        <section id="#form">
+            <h2>Play to Win a Box of Macarons</h2>
+        </section>
     </main>
     <footer>
         <section id="#footer"><h2>#</h2></section>
