--- a/index.html
+++ b/index.html
@@ -67,17 +67,25 @@
         <section id="#pastries">
             <h2>Always Fresh — Order your Pastries</h2>
             <section>
-                <h3>Ice Cream Cake Dessert</h3>
-                <img src="" alt="">
-                <h4>Cake</h4>
+                <h3>Chocolate / Mint Cupcake</h3>
+                <img src="images/cupcake-chocolate-mint.jpg" alt="chocolate cupcake with mint frosting">
+                <h4>Cupcake</h4>
                 <ul>
-                    <li>Cake Size: 8" Cake — Serves 8</li>
-                    <li>Flavor: Vanilla Ice Cream</li>
-                    <li>Bottom: Chocolate Brownie</li>
-                    <li>Topping: Strawberries<br>
-                        Raspberries, Blueberries</li>
+                    <li>Flavor: Chocolate muffin & Mint Frosting</li>
+                    <li>Topping: chocolate</li>
                 </ul>
-                <p><data value="24">24</data>$</p>
+                <p>$6 ea / $24/half doz</p>
+                <a href="#">Add To Cart</a>
+            </section>
+            <section>
+                <h3>Vanilla / Raspberry Cupcake</h3>
+                <img src="images/cupcake-raspberry.jpg" alt="Vanilla cupcake with raspberry whip cream frosting">
+                <h4>Cupcake</h4>
+                <ul>
+                    <li>Flavor: Vanilla Cupcake / Raspberry Frosting</li>
+                    <li>Topping: Raspberries</li>
+                </ul>
+                <p>$6 ea / $24/half doz</p>
                 <a href="#">Add To Cart</a>
             </section>
 
