--- a/index.html
+++ b/index.html
@@ -66,28 +66,98 @@
         </section>
         <section id="#pastries">
             <h2>Always Fresh — Order your Pastries</h2>
-            <section>
-                <h3>Chocolate / Mint Cupcake</h3>
-                <img src="images/cupcake-chocolate-mint.jpg" alt="chocolate cupcake with mint frosting">
-                <h4>Cupcake</h4>
-                <ul>
-                    <li>Flavor: Chocolate muffin & Mint Frosting</li>
-                    <li>Topping: chocolate</li>
-                </ul>
-                <p>$6 ea / $24/half doz</p>
-                <a href="#">Add To Cart</a>
-            </section>
-            <section>
-                <h3>Vanilla / Raspberry Cupcake</h3>
-                <img src="images/cupcake-raspberry.jpg" alt="Vanilla cupcake with raspberry whip cream frosting">
-                <h4>Cupcake</h4>
-                <ul>
-                    <li>Flavor: Vanilla Cupcake / Raspberry Frosting</li>
-                    <li>Topping: Raspberries</li>
-                </ul>
-                <p>$6 ea / $24/half doz</p>
-                <a href="#">Add To Cart</a>
-            </section>
+            <div>
+                <section>
+                    <h3>Chocolate / Mint</h3>
+                    <img src="images/cupcake-chocolate-mint.jpg" alt="chocolate cupcake with mint frosting">
+                    <h4>Cupcake</h4>
+                    <ul>
+                        <li>Flavor: Chocolate</li>
+                        <li>Frosting: Mint Buttercream</li>
+                    </ul>
+                    <p>$5 ea / $24/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+                <section>
+                    <h3>Vanilla / Raspberry</h3>
+                    <img src="images/cupcake-raspberry.jpg" alt="Vanilla cupcake with raspberry whip cream frosting">
+                    <h4>Cupcake</h4>
+                    <ul>
+                        <li>Flavor: Vanilla</li>
+                        <li>Frosting: Raspberry Whipped Cream</li>
+                    </ul>
+                    <p>$5 ea / $24/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+                <section>
+                    <h3>Cinnamon / Vanilla-Coffee</h3>
+                    <img src="images/cupcake-coffee-cinnamon.jpg" alt="Cinnamon cupcake with vanilla-coffee frosting">
+                    <h4>Cupcake</h4>
+                    <ul>
+                        <li>Flavor: Cinnamon</li>
+                        <li>Frosting: Vanilla-Coffee Buttercream</li>
+                    </ul>
+                    <p>$5 ea / $24/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+                <section>
+                    <h3>Red Velvet / Vanilla</h3>
+                    <img src="images/cupcake-red-velvet.jpg" alt="Red Velvet cupcake with vanilla frosting">
+                    <h4>Cupcake</h4>
+                    <ul>
+                        <li>Flavor: Red Velvet</li>
+                        <li>Frosting: Vanilla Buttercream</li>
+                    </ul>
+                    <p>$5 ea / $24/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+            </div>
+            <div>
+                <section>
+                    <h3>Mint / Strawberry</h3>
+                    <img src="images/macaron-strawberry.jpg" alt="Mint macaron with strawberry frosting">
+                    <h4>Macaron</h4>
+                    <ul>
+                        <li>Flavor: Mint</li>
+                        <li>Frosting: Strawberry</li>
+                    </ul>
+                    <p>$4 ea / $20/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+                <section>
+                    <h3>Raspberry / Raspberry</h3>
+                    <img src="images/macaron-raspberry.jpg" alt="Raspberry macaron with raspberry frosting">
+                    <h4>Macaron</h4>
+                    <ul>
+                        <li>Flavor: Raspberry</li>
+                        <li>Frosting: Raspberry</li>
+                    </ul>
+                    <p>$4 ea / $20/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+                <section>
+                    <h3>Chocolate / Chocolate-Almonds</h3>
+                    <img src="images/macaron-chocolate-almonds.jpg" alt="Chocolate macaron with chocolate and almond frosting">
+                    <h4>Macaron</h4>
+                    <ul>
+                        <li>Flavor: Chocolate</li>
+                        <li>Frosting: Chocolate-Almonds</li>
+                    </ul>
+                    <p>$4 ea / $20/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+                <section>
+                    <h3>Vanilla / Honey-Butter</h3>
+                    <img src="images/macaron-vanilla-honey-butter.jpg" alt="Vanilla macaron with honey & butter frosting">
+                    <h4>Macaron</h4>
+                    <ul>
+                        <li>Flavor: Vanilla</li>
+                        <li>Frosting: Honey-Butter</li>
+                    </ul>
+                    <p>$4 ea / $20/half doz</p>
+                    <a href="#">Add To Cart</a>
+                </section>
+            </div>
 
         </section>
         <section id="#game">
