--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <header>
-        <section id="ourStoryHeader">
-            <h1>Welcome to our story<br>about cupcakes and macarons</h1>
-            <a class="Button" id="btnOrderPastries"></a>
-            <a class="Button" id="btnMoreInfo"></a>
-        </section>
-        <img src="images/baking-logo.png" alt="A Baking Story logo">
+    <header id="home">
         <nav>
-            <h2>Main Navigation</h2>
+            <h2 id="mainNavigation">Main Navigation</h2>
+            <img src="images/baking-logo.png" alt="A Baking Story logo" class="mainLogo">
             <input type="checkbox" id="dropdown">
             <label for="dropdown"><span></span></label>
-            <ul>
+            <a href="#home"><img src="images/baking-logo-br.png" alt="A baking story brown logo" class="logo-brown"></a>
+            <ul class="mainNav">
                 <li><a href="#features">Our Story</a></li>
                 <li><a href="#howTo">Baking</a></li>
                 <li><a href="#pastries">Pastries</a></li>
                 <li><a href="#form">Contact Us</a></li>
             </ul>
+            <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
         </nav>
+        <section id="ourStoryHeader">
+            <h1>Welcome to our story<br>about cupcakes and macarons</h1>
+            <a href="#" class="Button" id="btnOrderPastries">Order Pastries</a>
+            <a href="" class="Button" id="btnMoreInfo">Our Story</a>
+        </section>
     </header>
     <main>
         <section id="features">
@@ -195,7 +197,25 @@
         </section>
     </main>
     <footer>
-        <section id="#footer"><h2>#</h2></section>
+        <section id="#footer">
+            <h6>This website was created for A Baking Story by Magic Ink Graphics.</h6>
+            <small>Copyrigh © 2020 by A Baking Story. All rights reserved.</small>
+            <section>
+                <h3>Contact Us</h3>
+                    <p>address</p>
+                    <p>phone</p>
+                    <p>email</p>
+            </section>
+            <section>
+                <h3>Find Us on Social Media</h3>
+                    <ul>
+                        <li><a href="#facebook">faceboo</a></li>
+                        <li><a href="#twitter">twitter</a></li>
+                        <li><a href="#instagram">instagram Us</a></li>
+                        <li><a href="#youtube">youtube</a></li>
+                    </ul>
+            </section>
+        </section>
     </footer>
 </body>
 </html>
