--- a/index.html
+++ b/index.html
@@ -12,24 +12,21 @@
 </head>
 <body>
     <header id="home">
-        <nav>
+        <nav class="mainNav">
             <h2 id="mainNavigation">Main Navigation</h2>
             <img src="images/baking-logo.png" alt="A Baking Story logo" class="mainLogo">
-            <input type="checkbox" id="dropdown">
-            <label for="dropdown"><span></span></label>
-            <a href="#home"><img src="images/baking-logo-br.png" alt="A baking story brown logo" class="logo-brown"></a>
-            <ul class="mainNav">
-                <li><a href="#features">Our Story</a></li>
-                <li><a href="#howTo">Baking</a></li>
-                <li><a href="#pastries">Pastries</a></li>
-                <li><a href="#form">Contact Us</a></li>
-            </ul>
-            <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
+            <a href="#home"><img src="images/baking-logo-br.png" alt="a baking story logo" class="logo-brown"></a>
+                <ul class="mainNav">
+                    <li><a href="#features">Our Story</a></li>
+                    <li><a href="#howTo">Baking</a></li>
+                    <li><a href="#pastries">Pastries</a></li>
+                    <li><a href="#form">Contact Us</a></li>
+                </ul>
         </nav>
         <section id="ourStoryHeader">
             <h1>Welcome to our story<br>about cupcakes and macarons</h1>
-            <a href="#" class="Button" id="btnOrderPastries">Order Pastries</a>
-            <a href="" class="Button" id="btnMoreInfo">Our Story</a>
+            <a href="#" class="button" id="btnOrderPastries">Order Pastries</a>
+            <a href="" class="button" id="btnOurStory">Our Story</a>
         </section>
     </header>
     <main>
