--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="Author" content="Lolita Halper">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Baking Story - Baking Pasteries for Every Occasion.</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="ionicons.min.css">
+
+
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>-->
@@ -37,25 +40,25 @@
         <section class="js--section-features" id="features">
                 <h2>Always Fresh — Baked to Perfection</h2>
                 <p>Hello, we're a Baking Story, your bakery on the corner.&nbsp;We know you're always busy. No time for baking. So let us take care of that. Just browse our menu and order away!</p>
-            <section id="days365">
+            <section id="days365" class="icon-big">
                 <h3>365 days / year</h3>
                 <p>Never bake again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
-                <img src="images/ion--ios-calendar.svg" alt="calendar-icon" class="svgImg">
+                <ion-icon name="calendar-clear-outline"></ion-icon>
             </section>
             <section id="ready20Min">
                 <h3>Ready in 20</h3>
                 <p>You're only twenty minutes away from your delicious and pastries delivered right to your home. We work with the best bakers in each town to ensure that you're 100% happy.</p>
-                <img src="images/ion--ios-stopwatch-outline.svg" alt="stopwatch-icon" class="svgImg">
+                <ion-icon name="stopwatch-outline"></ion-icon>
             </section>
-            <section id="organic">
+            <section id="organic" class="icon-big">
                 <h3>100% Organic</h3>
                 <p>All our ingredients are fresh, organic and local. Everything is baked the same day. Good for your health, the environment, and it also tastes better!</p>
-                <img src="images/ion--ios-nutrition-outline.svg" alt="carrot-icon" class="svgImg">
+                <ion-icon name="heart-outline"></ion-icon>
             </section>
-            <section id="orderAnything">
+            <section id="orderAnything" class="icon-big">
                 <h3>Order Anything</h3>
                 <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious pastries. It's up to you!</p>
-                <img src="images/ion--ios-cart-outline.svg" alt="shopping_cart-icon" class="svgImg">
+                <ion-icon name="cart-outline"></ion-icon>
             </section>
         </section>
 
@@ -206,15 +209,19 @@
             </section>
             <section id="socialMedia">
                 <h3>Find Us on Social Media</h3>
-                    <a href="#" aria-label="Facebook"><i class="fa fa-facebook-square"></i></a>
-		            <a href="#" aria-label="Twitter"><i class="fa fa-twitter-square"></i></i></a>
-                    <a href="#" aria-label="YouTube"><i class="fa fa-youtube-square"></i></a>
-			        <a href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" aria-label="Facebook"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#" aria-label="Facebook"><ion-icon name="logo-instagram"></ion-icon></a>
+		            <a href="#" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="#" aria-label="YouTube"><ion-icon name="logo-youtube"></ion-icon></a>
+			        <a href="#" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
             </section>
             <small>This website was created for A Baking Story by Lolita Halper.<br>Copyrigh © 2024 by A Baking Story. All rights reserved.</small>
         </section>
     </footer>
     
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/script2.js"></script>
     <script src="js/script.js"></script>
