--- a/index.html
+++ b/index.html
@@ -173,12 +173,19 @@
         </section>
 
         <section id="game" class="sectionPink">
-            <h2>Play to Win a Box of Macarons</h2>
-            <p>Click the button to generate two random numbers. <br>If both numbers are ones, you win!</p>
-            <span id="random1"></span>
-            <span id="random2"></span>
-            <p id="gameMsg"></p>
-            <button id="gamePlay">Play!</button>
+            <section class="playGame">
+                <h2>Play to Win a Box of Macarons</h2>
+                <p>Click the button to generate two random numbers. <br>If both numbers are ones, you win!</p>
+            </section>
+            <section class="randomNumbers">
+                <span id="random1"></span>
+                <span id="random2"></span>
+                <p id="gameMsg"></p>
+                
+            </section>
+            <section class="gameBtn">
+                <button id="gamePlay">Play!</button>
+            </section>
         </section>
 
         <!--<section class="sectionWhite">-->
