--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     </main>
     <footer>
-        <section id="footer" class="sectionWhite">
+        <section id="footer" class="sectionBrown">
             <section id="address">
                 <h3>Contact Us</h3>
                     <p>625 Baking St., San Diego, CA</p>
