--- a/index.html
+++ b/index.html
@@ -189,51 +189,51 @@
         </section>
 
         <section id="locations" class="sectionBrown">
-            <h2>We Have Store Fronts at These Locations</h2>
-                <section>
-                    <h3>Chocolate / Mint</h3>
-                    <img src="images/cupcake-chocolate-mint.jpg" alt="chocolate cupcake with mint frosting">
-                    <h4>Cupcake</h4>
-                    <ul>
-                        <li>Flavor: Chocolate</li>
-                        <li>Frosting: Mint Buttercream</li>
-                    </ul>
-                    <h5>$5 ea / $24/half doz</h5>
-                    <a href="#">Add To Cart</a>
-                </section>
-                <section>
-                    <h3>Vanilla / Raspberry</h3>
-                    <img src="images/cupcake-raspberry.jpg" alt="Vanilla cupcake with raspberry whip cream frosting">
-                    <h4>Cupcake</h4>
-                    <ul>
-                        <li>Flavor: Vanilla</li>
-                        <li>Frosting: Raspberry Whipped Cream</li>
-                    </ul>
-                    <h5>$5 ea / $24/half doz</h5>
-                    <a href="#">Add To Cart</a>
-                </section>
-                <section>
-                    <h3>Vanilla / Coffee</h3>
-                    <img src="images/cupcake-coffee-cinnamon.jpg" alt="Cinnamon cupcake with vanilla-coffee frosting">
-                    <h4>Cupcake</h4>
-                    <ul>
-                        <li>Flavor: Cinnamon</li>
-                        <li>Frosting: Vanilla-Coffee Buttercream</li>
-                    </ul>
-                    <h5>$5 ea / $24/half doz</h5>
-                    <a href="#">Add To Cart</a>
-                </section>
-                <section>
-                    <h3>Red Velvet / Vanilla</h3>
-                    <img src="images/cupcake-red-velvet.jpg" alt="Red Velvet cupcake with vanilla frosting">
-                    <h4>Cupcake</h4>
-                    <ul>
-                        <li>Flavor: Red Velvet</li>
-                        <li>Frosting: Vanilla Buttercream</li>
-                    </ul>
-                    <h5>$5 ea / $24/half doz</h5>
-                    <a href="#">Add To Cart</a>
-                </section>
+                <h2>We Have Store Fronts at These Locations</h2>
+                    <section>
+                        <h3>Chocolate / Mint</h3>
+                        <img src="images/carlsbad.jpg" alt="Carlsbad Location, CA">
+                        <h4>Cupcake</h4>
+                        <ul>
+                            <li>Flavor: Chocolate</li>
+                            <li>Frosting: Mint Buttercream</li>
+                        </ul>
+                        <h5>$5 ea / $24/half doz</h5>
+                        <a href="#">Add To Cart</a>
+                    </section>
+                    <section>
+                        <h3>Vanilla / Raspberry</h3>
+                        <img src="images/huntington_beach.jpg" alt="Huntington Beach Location, CA">
+                        <h4>Cupcake</h4>
+                        <ul>
+                            <li>Flavor: Vanilla</li>
+                            <li>Frosting: Raspberry Whipped Cream</li>
+                        </ul>
+                        <h5>$5 ea / $24/half doz</h5>
+                        <a href="#">Add To Cart</a>
+                    </section>
+                    <section>
+                        <h3>Vanilla / Coffee</h3>
+                        <img src="images/pasadena.jpg" alt="Pasadena Location, CA">
+                        <h4>Cupcake</h4>
+                        <ul>
+                            <li>Flavor: Cinnamon</li>
+                            <li>Frosting: Vanilla-Coffee Buttercream</li>
+                        </ul>
+                        <h5>$5 ea / $24/half doz</h5>
+                        <a href="#">Add To Cart</a>
+                    </section>
+                    <section>
+                        <h3>Red Velvet / Vanilla</h3>
+                        <img src="images/redondo_beach.jpg" alt="Redondo Beach Location. CA">
+                        <h4>Cupcake</h4>
+                        <ul>
+                            <li>Flavor: Red Velvet</li>
+                            <li>Frosting: Vanilla Buttercream</li>
+                        </ul>
+                        <h5>$5 ea / $24/half doz</h5>
+                        <a href="#">Add To Cart</a>
+                    </section>
         </section>
 
        
