--- a/index.html
+++ b/index.html
@@ -191,48 +191,44 @@
         <section id="locations" class="sectionBrown">
                 <h2>We Have Store Fronts at These Locations</h2>
                     <section>
-                        <h3>Chocolate / Mint</h3>
+                        <h3>CarlsBad</h3>
                         <img src="images/carlsbad.jpg" alt="Carlsbad Location, CA">
-                        <h4>Cupcake</h4>
+                        <h4>Open 7 - 7</h4>
                         <ul>
-                            <li>Flavor: Chocolate</li>
-                            <li>Frosting: Mint Buttercream</li>
+                            <li>Local Delivery</li>
+                            <li>info@abakingstory.com</li>
                         </ul>
-                        <h5>$5 ea / $24/half doz</h5>
-                        <a href="#">Add To Cart</a>
+                        <h5>Call 123-456-7890 ext 1</h5>
                     </section>
                     <section>
-                        <h3>Vanilla / Raspberry</h3>
+                        <h3>Huntington Beach</h3>
                         <img src="images/huntington_beach.jpg" alt="Huntington Beach Location, CA">
-                        <h4>Cupcake</h4>
+                        <h4>Open 7 - 7</h4>
                         <ul>
-                            <li>Flavor: Vanilla</li>
-                            <li>Frosting: Raspberry Whipped Cream</li>
+                            <li>Local Delivery</li>
+                            <li>info@abakingstory.com</li>
                         </ul>
-                        <h5>$5 ea / $24/half doz</h5>
-                        <a href="#">Add To Cart</a>
+                        <h5>Call 123-456-7890 ext 2</h5>
                     </section>
                     <section>
-                        <h3>Vanilla / Coffee</h3>
+                        <h3>Pasadena</h3>
                         <img src="images/pasadena.jpg" alt="Pasadena Location, CA">
-                        <h4>Cupcake</h4>
+                        <h4>Open 7 - 7</h4>
                         <ul>
-                            <li>Flavor: Cinnamon</li>
-                            <li>Frosting: Vanilla-Coffee Buttercream</li>
+                            <li>Local Delivery</li>
+                            <li>info@abakingstory.com</li>
                         </ul>
-                        <h5>$5 ea / $24/half doz</h5>
-                        <a href="#">Add To Cart</a>
+                        <h5>Call 123-456-7890 ext 3</h5>
                     </section>
                     <section>
-                        <h3>Red Velvet / Vanilla</h3>
+                        <h3>Redondo Beach</h3>
                         <img src="images/redondo_beach.jpg" alt="Redondo Beach Location. CA">
-                        <h4>Cupcake</h4>
+                        <h4>Open 7 - 7</h4>
                         <ul>
-                            <li>Flavor: Red Velvet</li>
-                            <li>Frosting: Vanilla Buttercream</li>
+                            <li>Local Delivery</li>
+                            <li>info@abakingstory.com</li>
                         </ul>
-                        <h5>$5 ea / $24/half doz</h5>
-                        <a href="#">Add To Cart</a>
+                        <h5>Call 123-456-7890 ext 4</h5>
                     </section>
         </section>
 
