--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
                 </div>
         </section>
         
-
         <section id="locations">
             <h2>We Have a Store Front at These Locations</h2>
                 <section>
@@ -254,27 +253,23 @@
         </section>
 
     </main>
-    <footer>
-        <section id="footer" class="sectionBrown">
-            <section id="address">
-                <h3>Contact Us</h3>
-                    <p>625 Baking St., San Diego, CA</p>
-                    <p>760-760-7676</p>
-                    <p>info@abakingstory.com</p>
-            </section>
-            <section id="socialMedia">
-                <h3>Find Us on Social Media</h3>
-                    <a href="#" aria-label="Facebook"><ion-icon name="logo-facebook"></ion-icon></a>
-                    <a href="#" aria-label="Facebook"><ion-icon name="logo-instagram"></ion-icon></a>
-		            <a href="#" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
-                    <a href="#" aria-label="YouTube"><ion-icon name="logo-youtube"></ion-icon></a>
-			        <a href="#" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
-            </section>
-            <small>This website was created for A Baking Story by Lolita Halper.<br>Copyrigh © 2024 by A Baking Story. All rights reserved.</small>
+    <footer id="footer">
+        <section id="address">
+            <h3>Contact Us</h3>
+                <p>625 Baking St., San Diego, CA</p>
+                <p>760-760-7676</p>
+                <p>info@abakingstory.com</p>
         </section>
+        <section id="socialMedia">
+            <h3>Find Us on Social Media</h3>
+                <a href="#" aria-label="Facebook"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="#" aria-label="Facebook"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="#" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="#" aria-label="YouTube"><ion-icon name="logo-youtube"></ion-icon></a>
+                <a href="#" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
+        </section>
+        <small>This website was created for A Baking Story by Lolita Halper.<br>Copyrigh © 2024 by A Baking Story. All rights reserved.</small>
     </footer>
-
-
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
