--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#howTo">Baking</a></li>
                     <li><a href="#pastries">Pastries</a></li>
                     <li><a href="#form">Contact Us</a></li>
-                    <button onclick="toggleColors()">Toggle Dark/Light Mode</button>
+                    <li><button onclick="toggleColors()">Toggle Dark/Light Mode</button></li>
                 </ul>
         </nav>
         <section id="ourStoryHeader">
@@ -270,7 +270,7 @@
         </section>
         <small>This website was created for A Baking Story by Lolita Halper.<br>Copyrigh © 2024 by A Baking Story. All rights reserved.</small>
     </footer>
-    
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
