--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="Author" content="Lolita Halper">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Baking Story - Baking Pasteries for Every Occasion.</title>
-   
+     <!--For the sticky nav-->
+     <script src="js/jquery.waypoints.min.js" async></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
+     <!--For the icons-->
+     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" async></script>
+     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" async></script>
+     <!--My written javascript file with async-->
+    <script src="js/script.js" async></script>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="ionicons.min.css">
-
-
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -270,11 +271,6 @@
         </section>
         <small>This website was created for A Baking Story by Lolita Halper.<br>Copyrigh © 2024 by A Baking Story. All rights reserved.</small>
     </footer>
-
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/script2.js"></script>
-    <script src="js/script.js"></script>
+    
 </body>
 </html>
