--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <li>Frosting: Raspberry Whipped Cream</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Vanilla Raspberry Cupcake" data-price="24">Add to Cart</button>
 
                 </section>
                 <section>
@@ -117,7 +117,7 @@
                         <li>Frosting: Vanilla-Coffee Buttercream</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Vanilla Coffee Cupcake" data-price="24">Add to Cart</button>
                 </section>
                 <section>
                     <h3>Red Velvet / Vanilla</h3>
@@ -128,7 +128,7 @@
                         <li>Frosting: Vanilla Buttercream</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Red Velvet Vanilla Cupcake" data-price="24">Add to Cart</button>
                 </section>
            
                 <section>
@@ -140,7 +140,7 @@
                         <li>Frosting: Strawberry</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Mint Strawberry Macaron" data-price="24">Add to Cart</button>
                 </section>
                 <section>
                     <h3>Raspberry / Vanilla</h3>
@@ -151,7 +151,7 @@
                         <li>Frosting: Raspberry</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Raspberry Vanilla Macaron" data-price="24">Add to Cart</button>
                 </section>
                 <section>
                     <h3>Chocolate / Nuts</h3>
@@ -162,7 +162,7 @@
                         <li>Frosting: Chocolate-Almonds</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Chocolate Nuts Macaron" data-price="24">Add to Cart</button>
                 </section>
                 <section>
                     <h3>Honey / Butter</h3>
@@ -173,7 +173,7 @@
                         <li>Frosting: Honey-Butter</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Chocolate Mint Cupcake" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Honey Butter Macaron" data-price="24">Add to Cart</button>
                 </section>
         </section>
 
