--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div id="cartIcon" class="addToCart">
                 <ion-icon name="cart-outline"></ion-icon><span id="cartItemCount">(0)</span>
                 <div id="cartItemsList"></div>
-                <strong>Total: $<span id="cartTotal">0.00</span></strong>
+                <strong>Total: $<span id="total-sum">0.00</span></strong>
             </div>
 
                 <section>
@@ -173,7 +173,7 @@
                         <li>Frosting: Honey-Butter</li>
                     </ul>
                     <h5>$24/half doz</h5>
-                    <button class="addCart" data-name="Honey Butter Macaron" data-price="24">Add to Cart</button>
+                    <button class="addCart" data-name="Honey Butter" data-price="24">Add to Cart</button>
                 </section>
         </section>
 
