--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
             <div id="cartIcon" class="addToCart">
                 <ion-icon name="cart-outline"></ion-icon><span id="cartItemCount">(0)</span>
-                <div id="cartItemsList"></div>
-                <strong>Total: $<span id="total-sum">0.00</span></strong>
+                <div id="cartItemsList"></div>Total: $<span id="total-sum">0.00</span>
+                <button class="removeOneItem" data-last-price="24">Remove One Item</button>
             </div>
 
                 <section>
